// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addOracle 1`] = `"Read Only Mode"`;

exports[`addOracle 2`] = `"addOracleHash"`;

exports[`addOracle 3`] = `"addOracleHash"`;

exports[`addOracle 4`] = `
Array [
  Array [
    "newOracleAddr",
  ],
  Array [
    "newOracleAddr",
  ],
]
`;

exports[`addOracle 5`] = `
Array [
  Array [
    "account",
    30000,
    Object {},
  ],
  Array [
    "account",
    30000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`autoRoll 1`] = `"Read Only Mode"`;

exports[`autoRoll 2`] = `"autoRollHash"`;

exports[`autoRoll 3`] = `"autoRollHash"`;

exports[`autoRoll 4`] = `
Array [
  Array [
    "oracleAddr",
    "100000000000000000000",
  ],
  Array [
    "oracleAddr",
    "100000000000000000000",
  ],
]
`;

exports[`autoRoll 5`] = `
Array [
  Array [
    "account",
    30000,
    Object {},
  ],
  Array [
    "account",
    30000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`claimReward 1`] = `"Read Only Mode"`;

exports[`claimReward 2`] = `"claimRewardTxHash"`;

exports[`claimReward 3`] = `"claimRewardTxHash"`;

exports[`claimReward 4`] = `
Array [
  Array [
    true,
    0,
  ],
  Array [
    true,
    0,
  ],
]
`;

exports[`claimReward 5`] = `
Array [
  Array [
    "account",
    60000,
    Object {},
  ],
  Array [
    "account",
    60000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`commitAddReward 1`] = `"Read Only Mode"`;

exports[`commitAddReward 2`] = `"commitAddRewardHash"`;

exports[`commitAddReward 3`] = `"commitAddRewardHash"`;

exports[`commitAddReward 4`] = `
Array [
  Array [
    2,
  ],
  Array [
    2,
  ],
]
`;

exports[`commitAddReward 5`] = `
Array [
  Array [
    "account",
    30000,
    Object {},
  ],
  Array [
    "account",
    30000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`commitReduceReward 1`] = `"Read Only Mode"`;

exports[`commitReduceReward 2`] = `"commitReduceRewardHash"`;

exports[`commitReduceReward 3`] = `"commitReduceRewardHash"`;

exports[`commitReduceReward 4`] = `
Array [
  Array [
    2,
  ],
  Array [
    2,
  ],
]
`;

exports[`commitReduceReward 5`] = `
Array [
  Array [
    "account",
    30000,
    Object {},
  ],
  Array [
    "account",
    30000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`disableStaking 1`] = `"Read Only Mode"`;

exports[`disableStaking 2`] = `"setStakeFlagTxHash"`;

exports[`disableStaking 3`] = `"setStakeFlagTxHash"`;

exports[`disableStaking 4`] = `
Array [
  Array [
    true,
  ],
  Array [
    true,
  ],
  Array [
    false,
  ],
  Array [
    false,
  ],
]
`;

exports[`disableStaking 5`] = `
Array [
  Array [
    "account",
    50000,
    Object {},
  ],
  Array [
    "account",
    50000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`enableStaking 1`] = `"Read Only Mode"`;

exports[`enableStaking 2`] = `"setStakeFlagTxHash"`;

exports[`enableStaking 3`] = `"setStakeFlagTxHash"`;

exports[`enableStaking 4`] = `
Array [
  Array [
    true,
  ],
  Array [
    true,
  ],
]
`;

exports[`enableStaking 5`] = `
Array [
  Array [
    "account",
    50000,
    Object {},
  ],
  Array [
    "account",
    50000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`getAddresses 1`] = `
Object {
  "burnAddress": "duoBurnAddr",
  "duoTokenAddress": "duoTokenAddr",
  "operator": "operatorAddr",
  "priceFeedList": Array [
    "oracleAddr0",
    "oracleAddr1",
    "oracleAddr2",
  ],
  "uploader": "uploaderAddr",
}
`;

exports[`getOracleList 1`] = `
Array [
  "oracleAddr0",
  "oracleAddr1",
  "oracleAddr2",
]
`;

exports[`getOracleStakes 1`] = `
Object {
  "oracle0": 100,
  "oracle1": 100,
}
`;

exports[`getOracleStakes 2`] = `
Array [
  Array [
    "oracle0",
  ],
  Array [
    "oracle1",
  ],
]
`;

exports[`getStagingAddReward 1`] = `
Object {
  "amount": 10,
  "user": "addUser",
}
`;

exports[`getStagingIndex 1`] = `
Object {
  "add": Object {
    "first": 1,
    "last": 3,
  },
  "reduce": Object {
    "first": 1,
    "last": 3,
  },
}
`;

exports[`getStagingReduceReward 1`] = `
Object {
  "amount": 10,
  "user": "reduceUser",
}
`;

exports[`getStates 1`] = `
Object {
  "lockMinTimeInSecond": 3600,
  "maxStakePerOracle": 50000,
  "minStakeAmt": 5000,
  "stakingEnabled": true,
  "totalRewardsToDistribute": 50000,
}
`;

exports[`getUserAward 1`] = `100`;

exports[`getUserAward 2`] = `
Array [
  Array [
    "account",
  ],
]
`;

exports[`getUserSize 1`] = `100`;

exports[`getUserStakes 1`] = `
Object {
  "oracle0": Array [
    100,
    100,
  ],
  "oracle1": Array [
    100,
    100,
  ],
}
`;

exports[`getUserStakes 2`] = `
Array [
  Array [
    "account",
    "oracle0",
  ],
  Array [
    "account",
    "oracle1",
  ],
]
`;

exports[`getUserStakes 3`] = `
Array [
  Array [
    "account",
    "oracle0",
    1,
  ],
  Array [
    "account",
    "oracle0",
    2,
  ],
  Array [
    "account",
    "oracle1",
    1,
  ],
  Array [
    "account",
    "oracle1",
    2,
  ],
]
`;

exports[`resetStagingAwards 1`] = `"Read Only Mode"`;

exports[`resetStagingAwards 2`] = `"resetStagingAwardsHash"`;

exports[`resetStagingAwards 3`] = `"resetStagingAwardsHash"`;

exports[`resetStagingAwards 4`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`resetStagingAwards 5`] = `
Array [
  Array [
    "account",
    30000,
    Object {},
  ],
  Array [
    "account",
    30000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`setMaxStakePerOracleAmt 1`] = `"Read Only Mode"`;

exports[`setMaxStakePerOracleAmt 2`] = `"setValueTxHash"`;

exports[`setMaxStakePerOracleAmt 3`] = `"setValueTxHash"`;

exports[`setMaxStakePerOracleAmt 4`] = `
Array [
  Array [
    0,
    "100000000000000000000",
  ],
  Array [
    0,
    "100000000000000000000",
  ],
  Array [
    0,
    "10000000000000000000000",
  ],
  Array [
    0,
    "10000000000000000000000",
  ],
]
`;

exports[`setMaxStakePerOracleAmt 5`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 240000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`setMaxStakePerOracleAmt 6`] = `
Array [
  Array [
    "account",
    30000,
    Object {},
  ],
  Array [
    "account",
    30000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`setMinStakingAmt 1`] = `"Read Only Mode"`;

exports[`setMinStakingAmt 2`] = `"setValueTxHash"`;

exports[`setMinStakingAmt 3`] = `"setValueTxHash"`;

exports[`setMinStakingAmt 4`] = `
Array [
  Array [
    0,
    "100000000000000000000",
  ],
  Array [
    0,
    "100000000000000000000",
  ],
]
`;

exports[`setMinStakingAmt 5`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 240000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`setMinStakingAmt 6`] = `
Array [
  Array [
    "account",
    30000,
    Object {},
  ],
  Array [
    "account",
    30000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`stageAddReward 1`] = `"Read Only Mode"`;

exports[`stageAddReward 2`] = `"stageAddRewardHash"`;

exports[`stageAddReward 3`] = `"stageAddRewardHash"`;

exports[`stageAddReward 4`] = `
Array [
  Array [
    Array [
      "addr0",
      "addr1",
    ],
    Array [
      "10000000000000000000",
      "20000000000000000000",
    ],
  ],
  Array [
    Array [
      "addr0",
      "addr1",
    ],
    Array [
      "10000000000000000000",
      "20000000000000000000",
    ],
  ],
]
`;

exports[`stageAddReward 5`] = `
Array [
  Array [
    "account",
    500000,
    Object {},
  ],
  Array [
    "account",
    500000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`stageReduceReward 1`] = `"Read Only Mode"`;

exports[`stageReduceReward 2`] = `"stageReduceRewardHash"`;

exports[`stageReduceReward 3`] = `"stageReduceRewardHash"`;

exports[`stageReduceReward 4`] = `
Array [
  Array [
    Array [
      "addr0",
      "addr1",
    ],
    Array [
      "10000000000000000000",
      "20000000000000000000",
    ],
  ],
  Array [
    Array [
      "addr0",
      "addr1",
    ],
    Array [
      "10000000000000000000",
      "20000000000000000000",
    ],
  ],
]
`;

exports[`stageReduceReward 5`] = `
Array [
  Array [
    "account",
    500000,
    Object {},
  ],
  Array [
    "account",
    500000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`stake 1`] = `"Read Only Mode"`;

exports[`stake 2`] = `"stakeTxHash"`;

exports[`stake 3`] = `"stakeTxHash"`;

exports[`stake 4`] = `
Array [
  Array [
    "oracleAddr",
    "100000000000000000000",
  ],
  Array [
    "oracleAddr",
    "100000000000000000000",
  ],
]
`;

exports[`stake 5`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 240000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`stake 6`] = `
Array [
  Array [
    "account",
    240000,
    Object {},
  ],
  Array [
    "account",
    240000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`unstake 1`] = `"Read Only Mode"`;

exports[`unstake 2`] = `"unstakeTxHash"`;

exports[`unstake 3`] = `"unstakeTxHash"`;

exports[`unstake 4`] = `
Array [
  Array [
    "oracleAddr",
  ],
  Array [
    "oracleAddr",
  ],
]
`;

exports[`unstake 5`] = `
Array [
  Array [
    Object {
      "from": "account",
      "gas": 240000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
  Array [
    Object {
      "from": "account",
      "gas": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`unstake 6`] = `
Array [
  Array [
    "account",
    240000,
    Object {},
  ],
  Array [
    "account",
    240000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`updateUploaderByOperator 1`] = `"Read Only Mode"`;

exports[`updateUploaderByOperator 2`] = `"updateUploaderByOperatorSendHash"`;

exports[`updateUploaderByOperator 3`] = `"updateUploaderByOperatorSendHash"`;

exports[`updateUploaderByOperator 4`] = `
Array [
  Array [
    "newUploaderAddr",
  ],
  Array [
    "newUploaderAddr",
  ],
]
`;

exports[`updateUploaderByOperator 5`] = `
Array [
  Array [
    "account",
    30000,
    Object {},
  ],
  Array [
    "account",
    30000,
    Object {
      "gasLimit": 20000,
      "gasPrice": 1000000000,
      "nonce": 10,
    },
  ],
]
`;
